# sps_genai

./: .dockerignore  .gitignore  Dockerfile  api.py  llm_api.py  main.py  pyproject.toml  quick_train.py
app/: bigram_model.py  main.py
helper_lib/: __init__.py  checkpoints.py  data_loader.py  evaluator.py  generator.py  model.py  trainer.py  utils.py
helper_lib_a4/: data_loader.py  model.py  trainer.py
helper_lib_llm/: data_loader.py  generator.py  model.py  trainer.py
helper_lib_new/: checkpoints.py  data_loader.py  model.py  trainer.py
sps_genai.egg-info/: PKG-INFO  SOURCES.txt  requires.txt  top_level.txt
