[project]
name = "sps-genai"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    "fastapi[standard]>=0.116.1",
    "torch>=2.3.0",
    "torchvision>=0.18.0",
    "tqdm>=4.66.0",
    "matplotlib>=3.8.0",
    "python-multipart>=0.0.9"
]
